--- a/data/department.html
+++ b/data/department.html
@@ -23,7 +23,7 @@
     <!-- Awal Jumbotron -->
     <div class="jumbotron">
       <div class="col-sm-1 homeBtnAlign">
-        <a href="../home.html#home" type="button" class="homeBtn">
+        <a href="../home.html" type="button" class="homeBtn">
           <span class="glyphicon glyphicon-home"></span>
         </a>
       </div>
