--- a/data/job.html
+++ b/data/job.html
@@ -23,7 +23,7 @@
     <!-- Awal Jumbotron -->
     <div class="jumbotron">
       <div class="col-sm-1 homeBtnAlign">
-        <a href="../home.html#home" type="button" class="homeBtn">
+        <a href="../home.html" type="button" class="homeBtn">
           <span class="glyphicon glyphicon-home"></span>
         </a>
       </div>
@@ -56,38 +56,50 @@
         <div class="form-group form-input">
 
           <div class="col-sm-8 col-sm-offset-2">
-            <div class="col-sm-3 col-sm-offset-2">
+            <div class="col-sm-3 col-sm-offset-1">
               <label for="jobID">ID Pekerjaan</label>
             </div>
-            <div class="col-sm-5">
-              <input type="text" class="form-control" placeholder="id pekerjaan" id="jobID" value="">
+            <div class="col-sm-1">
+              <label for="jobName">:</label>
+            </div>            
+            <div class="col-sm-6">
+              <input type="text" class="form-control" placeholder="01**" id="jobID" value="">
             </div>
           </div>
 
           <div class="col-sm-8 col-sm-offset-2">
-            <div class="col-sm-3 col-sm-offset-2">
+            <div class="col-sm-3 col-sm-offset-1">
               <label for="jobName">Nama Pekerjaan</label>
             </div>
-            <div class="col-sm-5">
+            <div class="col-sm-1">
+              <label for="jobName">:</label>
+            </div>            
+            <div class="col-sm-6">
               <input type="text" class="form-control" placeholder="nama pekerjaan" id="jobName" value="">
             </div>
           </div>
 
           <div class="col-sm-8 col-sm-offset-2">
-            <div class="col-sm-3 col-sm-offset-2">
-              <label for="maxSalary">Gaji Tertinggi</label>
+            <div class="col-sm-3 col-sm-offset-1">
+              <label for="maxSalary">Gaji Terendah</label>
             </div>
-            <div class="col-sm-5">
-              <input type="number" class="form-control" placeholder="" id="maxSalary" value="">
+            <div class="col-sm-1">
+              <label for="jobName">:</label>
+            </div>            
+            <div class="col-sm-6">
+              <input type="number" class="form-control" placeholder="500.000" id="minSalary" value="">
             </div>
           </div>
 
           <div class="col-sm-8 col-sm-offset-2">
-            <div class="col-sm-3 col-sm-offset-2">
-              <label for="maxSalary">Gaji Terendah</label>
+            <div class="col-sm-3 col-sm-offset-1">
+              <label for="maxSalary">Gaji Tertinggi</label>
             </div>
-            <div class="col-sm-5">
-              <input type="number" class="form-control" placeholder="" id="minSalary" value="">
+            <div class="col-sm-1">
+              <label for="jobName">:</label>
+            </div>            
+            <div class="col-sm-6">
+              <input type="number" class="form-control" placeholder="1.000.000" id="maxSalary" value="">
             </div>
           </div>
 
@@ -116,7 +128,7 @@
 
           <div class="modal-body">
             <!-- Deskripsi Halaman ini -->
-            Membuat atau memperbarui data Pekerjaan(ID, Nama, dan Prakiraan Gaji).
+            Membuat atau memperbarui data Pekerjaan(ID, Nama, dan Gaji Min&Max).
           </div>
 
         </div>
