--- a/home.html
+++ b/home.html
@@ -29,7 +29,26 @@
       </div>
 
       <div class="col-sm-8 col-sm-offset-1 text-center">
-        <h1 class="fontSelect">SI Human Resource</h1>       
+        <h1 class="fontSelect">SI Human Resource</h1>
+      </div>
+
+<!--       <div class="col-sm-1 col-sm-offset-1 accBtnAlign">
+        <a href="" type="button" class="accBtn">
+          <span class="glyphicon glyphicon-user"></span>
+        </a>
+      </div> -->
+
+      <div class="dropdown col-sm-1 col-sm-offset-1 accBtnAlign">
+        <a href="" class="dropdown-toggle accBtn" type="button" id="accBtnDropDown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+          <span class="glyphicon glyphicon-user"></span>
+        </a>
+        <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="accBtnDropDown">
+          <li class="dropdown-header">Account</li>
+<!--           <li><a href="#"></a></li>
+          <li><a href="#"></a></li> -->
+          <li role="separator" class="divider"></li>
+          <li><a href="index.html"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+        </ul>
       </div>
 
       <div class="col-sm-1 col-sm-offset-11 aboutBtnAlign">
@@ -58,6 +77,13 @@
     </section>
 
     <!-- Akhir Navigasi Bar -->
+
+    <!-- Awal Area Chart -->
+    <section id="areaChart">
+      <div id="chartContainer" style="height: 370px; max-width: 920px; margin: 0px auto;"></div>
+    </section>
+
+    <!-- Akhir Area Chart -->
 
     <!-- Awal Pop up Informasi -->
 
@@ -96,6 +122,9 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.canvasjs.min.js"></script>
+    <script src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
+    <script src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script>
+    <script src="js/home-chart.js"></script>
     <script src="js/home-script.js"></script>
   </body>
 </html>
