--- a/data/department.html
+++ b/data/department.html
@@ -60,7 +60,7 @@
               <label for="departID">ID Departemen</label>
             </div>
             <div class="col-sm-5">
-              <input type="text" class="form-control" placeholder="id departemen" id="departID" value="">
+              <input type="text" class="form-control" placeholder="0*" id="departID" value="">
             </div>
           </div>
 
@@ -75,10 +75,10 @@
 
           <div class="col-sm-8 col-sm-offset-2">
             <div class="col-sm-3 col-sm-offset-2">
-              <label for="manager">Menejer</label>
+              <label for="manager">Manajer</label>
             </div>
             <div class="col-sm-5">
-              <input type="text" class="form-control" placeholder="menejer" id="manager" value="">
+              <input type="text" class="form-control" placeholder="manajer" id="manager" value="">
             </div>
           </div>
 
@@ -107,7 +107,7 @@
 
           <div class="modal-body">
             <!-- Deskripsi Halaman ini -->
-            Membuat atu memperbarui data Departemen(ID, Nama, dan Manager).
+            Membuat atau memperbarui data Departemen(ID, Nama, dan Manajer).
           </div>
 
         </div>
