--- a/data/employee.html
+++ b/data/employee.html
@@ -44,7 +44,7 @@
 
     <section class="tittle">
       <div class="col-sm-12">
-        <h2 class="text-center">Pekerja</h2>
+        <h2 class="text-center">Pegawai</h2>
         <hr class="hr1">
         <hr class="hr2">
       </div>
@@ -57,10 +57,10 @@
 
           <div class="col-sm-9 col-sm-offset-1">
             <div class="col-sm-3 col-sm-offset-2">
-              <label for="employID">ID Pekerja</label>
+              <label for="employID">ID Pegawai</label>
             </div>
             <div class="col-sm-6">
-              <input type="text" class="form-control" placeholder="id pekerja" id="employID" value="">
+              <input type="text" class="form-control" placeholder="0101**" id="employID" value="">
             </div>
           </div>
 
@@ -87,7 +87,7 @@
               <label for="emailAddress">Email</label>
             </div>
             <div class="col-sm-6">
-              <input type="email" class="form-control" placeholder="contoh@mail.com" id="emailAddress" value="">
+              <input type="email" class="form-control" placeholder="you@example.com" id="emailAddress" value="">
             </div>
           </div>
 
@@ -96,7 +96,7 @@
               <label for="phoneNumber">Nomor Telepon</label>
             </div>
             <div class="col-sm-6">
-              <input type="phone" class="form-control" placeholder="" id="phoneNumber" value="">
+              <input type="phone" class="form-control" placeholder="+628XX-XXXX-XXXX" id="phoneNumber" value="">
             </div>
           </div>
 
@@ -120,7 +120,7 @@
               <label for="salary">Gaji</label>
             </div>
             <div class="col-sm-6">
-              <input type="number" class="form-control" placeholder="" id="salary" value="">
+              <input type="number" class="form-control" placeholder="1.500.000" id="salary" value="">
             </div>
           </div>
 
@@ -129,7 +129,7 @@
               <label for="allowance">Tunjangan</label>
             </div>
             <div class="col-sm-6">
-              <input type="number" class="form-control" placeholder="" id="allowance" value="">
+              <input type="number" class="form-control" placeholder="800.000" id="allowance" value="">
             </div>
           </div>
 
@@ -158,7 +158,7 @@
 
           <div class="modal-body">
             <!-- Deskripsi Halaman ini -->
-            Membuat atau memperbarui data Pekerja(ID, Nama Lengkap, Kontak, Gaji, dsb).
+            Membuat atau memperbarui data Pegawai(ID, Nama Lengkap, Kontak, Gaji).
           </div>
 
         </div>
