--- a/home.html
+++ b/home.html
@@ -68,7 +68,7 @@
           <button id="jobBtn" type="button" class="menuBtn btn btn-default">Pekerjaan</button>
         </div>
         <div class="btn-group" role="group">
-          <button id="employBtn" type="button" class="menuBtn btn btn-default">Pekerja</button>
+          <button id="employBtn" type="button" class="menuBtn btn btn-default">Pegawai</button>
         </div>
         <div class="btn-group" role="group">
           <button id="departBtn" type="button" class="menuBtn btn btn-default">Departemen</button>
