--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="container col-sm-6 col-sm-offset-3">
 
         <div class="col-sm-8 col-sm-offset-2">
-          <h1>Mulai Mencoba</h1>
+          <h1>Login</h1>
         </div>
 
         <div class="col-sm-8 col-sm-offset-2">
