--- a/data/department.html
+++ b/data/department.html
@@ -131,6 +131,6 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/jquery.canvasjs.min.js"></script>
-    <script src="../js/home-script.js"></script>
+    <script src="../js/data-script.js"></script>
   </body>
 </html>
