--- a/data/job.html
+++ b/data/job.html
@@ -40,6 +40,13 @@
     </div>
     <!-- Akhir Jumbotron -->
 
+    <!-- Awal Notifikasi ketika melakukan Submit -->
+
+    <div class="col-sm-12" id="notifSubmition">
+    </div>
+
+    <!-- Akhir Notifikasi ketika melakukan Submit -->
+
     <!-- Awal area input data -->
 
     <section class="tittle">
@@ -60,7 +67,7 @@
               <label for="jobID">ID Pekerjaan</label>
             </div>
             <div class="col-sm-1">
-              <label for="jobName">:</label>
+              <label for="">:</label>
             </div>            
             <div class="col-sm-6">
               <input type="text" class="form-control" placeholder="01**" id="jobID" value="">
@@ -72,7 +79,7 @@
               <label for="jobName">Nama Pekerjaan</label>
             </div>
             <div class="col-sm-1">
-              <label for="jobName">:</label>
+              <label for="">:</label>
             </div>            
             <div class="col-sm-6">
               <input type="text" class="form-control" placeholder="nama pekerjaan" id="jobName" value="">
@@ -84,7 +91,7 @@
               <label for="maxSalary">Gaji Terendah</label>
             </div>
             <div class="col-sm-1">
-              <label for="jobName">:</label>
+              <label for="">:</label>
             </div>            
             <div class="col-sm-6">
               <input type="number" class="form-control" placeholder="500.000" id="minSalary" value="">
@@ -96,7 +103,7 @@
               <label for="maxSalary">Gaji Tertinggi</label>
             </div>
             <div class="col-sm-1">
-              <label for="jobName">:</label>
+              <label for="">:</label>
             </div>            
             <div class="col-sm-6">
               <input type="number" class="form-control" placeholder="1.000.000" id="maxSalary" value="">
@@ -105,7 +112,7 @@
 
           <div class="col-sm-6 col-sm-offset-3">
             <div class="col-sm-6 col-sm-offset-3 text-center">
-              <button type="button" class="btn btn-warning">Submit</button>
+              <button type="button" class="btn btn-warning" id="submitBtn">Submit</button>
             </div>
           </div>
 
@@ -113,7 +120,7 @@
       </div>
     </section>
 
-    <!-- Awal area input data -->
+    <!-- Akhir area input data -->
 
     <!-- Awal Pop up Informasi -->
 
@@ -152,6 +159,6 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/jquery.canvasjs.min.js"></script>
-    <script src="../js/home-script.js"></script>
+    <script src="../js/data-script.js"></script>
   </body>
 </html>
