--- a/data/employee.html
+++ b/data/employee.html
@@ -40,6 +40,13 @@
     </div>
     <!-- Akhir Jumbotron -->
 
+    <!-- Awal Notifikasi ketika melakukan Submit -->
+
+    <div class="col-sm-12" id="notifSubmition">
+    </div>
+
+    <!-- Akhir Notifikasi ketika melakukan Submit -->
+
     <!-- Awal area input data -->
 
     <section class="tittle">
@@ -135,7 +142,7 @@
 
           <div class="col-sm-6 col-sm-offset-3">
             <div class="col-sm-6 col-sm-offset-3 text-center">
-              <button type="button" class="btn btn-warning">Submit</button>
+              <button type="button" class="btn btn-warning" id="submitBtn">Submit</button>
             </div>
           </div>
 
