--- a/data/department.html
+++ b/data/department.html
@@ -67,7 +67,7 @@
               <label for="departID">ID Departemen</label>
             </div>
             <div class="col-sm-5">
-              <input type="text" class="form-control" placeholder="0*" id="departID" value="">
+              <input type="number" class="form-control" placeholder="0*" id="departID" value="">
             </div>
           </div>
 
