--- a/data/employee.html
+++ b/data/employee.html
@@ -67,7 +67,7 @@
               <label for="employID">ID Pegawai</label>
             </div>
             <div class="col-sm-6">
-              <input type="text" class="form-control" placeholder="0101**" id="employID" value="">
+              <input type="number" class="form-control" placeholder="0101**" id="employID" value="">
             </div>
           </div>
 
