--- a/data/job.html
+++ b/data/job.html
@@ -64,19 +64,19 @@
 
           <div class="col-sm-8 col-sm-offset-2">
             <div class="col-sm-3 col-sm-offset-1">
-              <label for="jobID">ID Pekerjaan</label>
+              <label class="labelInput" for="jobID">ID Pekerjaan</label>
             </div>
             <div class="col-sm-1">
               <label for="">:</label>
             </div>            
             <div class="col-sm-6">
-              <input type="text" class="form-control" placeholder="01**" id="jobID" value="">
+              <input type="number" class="form-control" placeholder="01**" id="jobID" value="">
             </div>
           </div>
 
           <div class="col-sm-8 col-sm-offset-2">
             <div class="col-sm-3 col-sm-offset-1">
-              <label for="jobName">Nama Pekerjaan</label>
+              <label class="labelInput" for="jobName">Nama Pekerjaan</label>
             </div>
             <div class="col-sm-1">
               <label for="">:</label>
@@ -88,7 +88,7 @@
 
           <div class="col-sm-8 col-sm-offset-2">
             <div class="col-sm-3 col-sm-offset-1">
-              <label for="maxSalary">Gaji Terendah</label>
+              <label class="labelInput" for="minSalary">Gaji Terendah</label>
             </div>
             <div class="col-sm-1">
               <label for="">:</label>
@@ -100,7 +100,7 @@
 
           <div class="col-sm-8 col-sm-offset-2">
             <div class="col-sm-3 col-sm-offset-1">
-              <label for="maxSalary">Gaji Tertinggi</label>
+              <label class="labelInput" for="maxSalary">Gaji Tertinggi</label>
             </div>
             <div class="col-sm-1">
               <label for="">:</label>
