--- a/data/department.html
+++ b/data/department.html
@@ -41,11 +41,11 @@
               </a>
             </div>
 
-            <div class="hidden-xs">
+            <!-- <div class="hidden-xs">
               <a href="" class="dropdown-toggle accBtn navbar-right" type="button" id="accBtnDropDown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                 <span class="glyphicon glyphicon-user"></span>
               </a>
-            </div>
+            </div> -->
 
             <div class="collapse navbar-collapse" id="navbar-collapse-account">
               <ul class="nav navbar-nav navbar-right">
@@ -68,7 +68,7 @@
       <!-- Awal Navbar About -->
       <div class="col-sm-12 text-right aboutBtnArea">
         <div class="aboutBtnAlign hidden-xs">
-          <button href="" type="button" class="aboutBtn btn btn-warning text-right" data-toggle="modal" data-target="#modal-1">
+          <button href="" type="button" class="aboutBtn btn btn-warning text-right" data-toggle="modal" data-target="#web-info">
             <span class="glyphicon glyphicon-info-sign"></span>
           </button>
         </div>
@@ -141,7 +141,7 @@
 
     <!-- Awal Pop up Informasi -->
 
-    <div class="modal fade" id="modal-1">
+    <div class="modal fade" id="web-info">
       <div class="modal-dialog">
         <div class="modal-content popup">
 
